test_regress/t/t_parse_sync_bad2.out
%Error: t/t_parse_sync_bad2.v:17:16: syntax error, unexpected IDENTIFIER
   17 |       Invalid1 invalid1;   
      |                ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_parse_sync_bad2.v:20:16: syntax error, unexpected IDENTIFIER
   20 |       Invalid2 invalid2;   
      |                ^~~~~~~~
%Error: Exiting due to
